@@ -44,6 +44,7 @@ A [Minetest][] mod that provides a set of free sounds & methods. It is intended 
 | [gallop_02][]                     | Alan McKinney (alanmcki) | CC BY 3.0    |                         |
 | [giraffe_hum][]                   | [↓](#authors)            | CC BY-SA 4.0 |                         |
 | [goat_bleat_*][goat_bleat]        | Stephan                  | CC0          |                         |
+| [gorilla_grunt][]                 | [↓](#authors)            | CC0          |                         |
 | [gorilla_roar][]                  | J0ck0                    | CC0          |                         |
 | [grasshopper][]                   | straget                  | CC0          |                         |
 | [horse_neigh_01][]                | GoodListener             | CC BY 3.0    |                         |
@@ -121,7 +122,8 @@ A [Minetest][] mod that provides a set of free sounds & methods. It is intended 
 
 <a name="authors">**Authors Continued:**</a>
 
-- **giraffe_hum:** Anton Baotic, Florian Sicks & Angela S. Stoeger
+- **giraffe_hum:** Anton Baotic, Florian Sicks, & Angela S. Stoeger
+- **gorilla_grunt:** Anton Baotic, Florian Sicks, & Angela S. Stoeger
 - **hyena:** Mathevon N, Koralek A, Weldele M, Glickman S, & Theunissen F
 - **piano:** Scott Joplin & Tim Starling
 
@@ -275,6 +277,7 @@ end
 [gallop_02]: https://freesound.org/s/403025/
 [giraffe_hum]: https://bmcresnotes.biomedcentral.com/articles/10.1186/s13104-015-1394-3#Sec10
 [goat_bleat]: https://pdsounds.org/pdsounds_files/files/audio/ziegengatter.mp3
+[gorilla_grunt]: https://www.mediacollege.com/downloads/sound-effects/animals/primates/
 [gorilla_roar]: https://freesound.org/s/397054/
 [grasshopper]: https://freesound.org/s/401939/
 [horse_neigh_01]: https://freesound.org/s/322443/
