@@ -4,6 +4,7 @@ next
 - added sounds:
 	- cricket
 	- giraffe_hum
+	- gorilla_grunt
 	- gorilla_roar
 	- parrot
 	- parrot_chirp
